# ImageClassify

./: README.md
Code/Client/imageclassificationsystemclient/: README.md  build.gradle  settings.gradle
Code/Client/imageclassificationsystemclient/app/: build.gradle  proguard-rules.pro
Code/Client/imageclassificationsystemclient/tflibrary/: build.gradle  proguard-rules.pro
Code/Client/imageclassificationsystemclient/tflibrary/src/main/java/: CMakeLists.txt
Code/Client/imageclassificationsystemclient/tflibrary/src/main/java/com/codekong/tflibrary/activity/: CameraActivity.java  CameraClassifierActivity.java  CameraConnectionFragment.java  ClassifierImgFromAlbumActivity.java  TopBarBaseActivity.java
Code/Client/imageclassificationsystemclient/tflibrary/src/main/java/com/codekong/tflibrary/config/: Constant.java
Code/Client/imageclassificationsystemclient/tflibrary/src/main/java/com/codekong/tflibrary/customview/: AutoFitTextureView.java  OverlayView.java  RecognitionScoreView.java  ResultsView.java
Code/Client/imageclassificationsystemclient/tflibrary/src/main/java/com/codekong/tflibrary/env/: BorderedText.java  ImageUtils.java  Logger.java  Size.java  SplitTimer.java
Code/Client/imageclassificationsystemclient/tflibrary/src/main/java/com/codekong/tflibrary/utils/: BitmapUtil.java  Classifier.java  FileUtil.java  TensorFlowImageClassifier.java
Code/SQL/: imageclassify.sql
Code/Server/imageclassify/: .classpath  .project  README.md
Code/Server/imageclassify/src/: hanlp.properties  hibernate.cfg.xml
Reflection/: 参赛感言.docx
Video/: README.md
(+365 files in other folders)
